test/typecheck/y_error_18.j
class UWU
{
	Void main()
	{
		Int a;
		Bool b;

		new A().x = "owo";
		println(new A());
	}
}

class A
{
	String x;
}
